# llama-swap-swiftbar-plugin

./: .gitignore  Cargo.toml  README.md  release.sh  test_menu_error.txt  test_menu_high_memory.txt  test_menu_not_installed.txt  test_menu_running.txt  test_menu_stopped.txt
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
docs/: README.md  developer.md  installation.md
docs/specs/: 01-project-setup.md  02-streaming-infrastructure.md  03-visual-components.md  04-service-integration.md  05-data-management.md  06-menu-construction.md  07-testing-optimization.md  08-adaptive-polling.md
example-scripts/: llama-swap-swiftbar-custom.sh
examples/: memory_debug.rs  menu_preview.rs
scripts/: llama-swap-swiftbar-dev.sh  llama-swap-swiftbar.sh
src/: charts.rs  commands.rs  constants.rs  icons.rs  lib.rs  main.rs  menu.rs  metrics.rs  models.rs  persistence.rs  service.rs  state_model.rs  types.rs
src/state_machines/: agent.rs  mod.rs  model.rs  polling_mode.rs  program.rs
tests/: install_ux_tests.rs  metrics_tests.rs  sleep_mechanism_tests.rs  vecdeque_behavior_tests.rs
