[package]
name = "llama-swap-swiftbar"
version = "0.1.0"
edition = "2021"
authors = ["Llama-Swap Team"]
description = "SwiftBar plugin for Llama-Swap service monitoring"

[lib]
name = "llama_swap_swiftbar"
path = "src/lib.rs"

[[bin]]
name = "llama-swap-swiftbar"
path = "src/main.rs"



[dependencies]
# Menu bar integration - disable default tokio feature
bitbar = { version = "0.7", default-features = false, features = ["base64", "image"] }

# HTTP client for API calls - blocking mode only
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing for charts and icons
image = "0.24"
png = "0.17"

# Signal handling for graceful shutdown
ctrlc = "3.4"

# System information for memory usage
sysinfo = "0.31"
base64 = "0.22.1"

# High-performance circular queue with serde support
circular-queue = { version = "0.2", features = ["serde_support"] }


# State machine DSL dependency removed - was unused

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols for smaller binary
panic = "abort"     # Smaller binary, no unwinding

# Development profile for faster compilation
[profile.dev]
opt-level = 0
debug = true
